<resources>
    <string name="app_name">Mis Lugares</string>
    <string name="mostrar">MOSTRAR LUGARES</string>
    <string name="preferencias">PREFERENCIAS</string>
    <string name="acerca_de">ACERCA DE</string>
    <string name="salir">SALIR</string>
    <string name="labelNombre">Nombre</string>
    <string name="hintNombre">Nombre</string>
    <string name="labelTipo">Tipo</string>
    <string name="labelDireccion">Direccion</string>
    <string name="hintDireccion">Direccion</string>
    <string name="labelTelefono">Telefono</string>
    <string name="hintTelefono">Telefono</string>
    <string name="labelUrl">Url</string>
    <string name="hintUrl">Url</string>
    <string name="labelComentario">Comentario</string>
    <string name="hintComentario">Comentario</string>
    <string name="acerca">Este programa ha sido desarrollado como ejemplo para demostrar cómo se pueden lanzar nuevas actividades desde la actividad principal.</string>
    <string name="buscar">Buscar</string>
    <string name="nombre_lugar">Nombre del lugar</string>
    <string name="tipo_lugar">Tipo Lugar</string>
    <string name="labelFecha">Fecha</string>
    <string name="labelHora">Hora</string>
    <string name="labelLugar">Lugar</string>
    <string name="camara">Camara</string>
    <string name="galeria">Galeria</string>
    <string name="valoracion">Valoracion</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="compartir">Compartir</string>
    <string name="llegar">Llegar</string>
    <string name="editar">Editar</string>
    <string name="borrar">Borrar</string>
    <string name="mapa">Mapa</string>
    <string name="registrar">Registrar</string>
</resources>