<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EdicionLugar" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/tvNombreLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/labelNombre" />

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintNombre"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvTipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/labelTipo" />

        <Spinner
            android:id="@+id/sTipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvDireccionLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/labelDireccion" />

        <EditText
            android:id="@+id/etDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintDireccion"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvTelefonoLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/labelTelefono" />

        <EditText
            android:id="@+id/etTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintTelefono"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvUrlLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/labelUrl" />

        <EditText
            android:id="@+id/etUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/labelUrl"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvComentarioLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/labelComentario" />

        <EditText
            android:id="@+id/etComentario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

    </LinearLayout>

</ScrollView>