<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".VistaLugar">

    <item
        android:id="@+id/accion_compartir"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/compartir"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/accion_llegar"
        android:icon="@android:drawable/ic_menu_directions"
        android:title="@string/llegar"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/accion_editar"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/editar"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/accion_borrar"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/borrar"
        app:showAsAction="ifRoom" />
</menu>