<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="60dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/bMostrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/EstiloBoton"
        android:text="@string/mostrar"/>

    <Button
        android:id="@+id/bPreferencias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/EstiloBoton"
        android:text="@string/preferencias"
        />

    <Button
        android:id="@+id/bAcercaDe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/EstiloBoton"
        android:text="@string/acerca_de" />

    <Button
        android:id="@+id/bSalir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/EstiloBoton.Alternativo"
        android:text="@string/salir" />

</LinearLayout>